Upload list to mongodb

--- a/GeneralKnowledge.Test/App.config
+++ b/GeneralKnowledge.Test/App.config
@@ -11,4 +11,7 @@
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
+  <appSettings>
+    <add key="mongoConnection" value="mongodb://localhost:27017" />
+  </appSettings>
 </configuration>
