--- a/GeneralKnowledge.Test/packages.config
+++ b/GeneralKnowledge.Test/packages.config
@@ -2,10 +2,16 @@
 <packages>
   <package id="Antlr" version="3.4.1.9004" targetFramework="net45" />
   <package id="CsvHelper" version="2.16.3.0" targetFramework="net45" />
+  <package id="DnsClient" version="1.0.7" targetFramework="net45" />
   <package id="ImageResizer" version="4.0.5" targetFramework="net45" />
   <package id="Microsoft.AspNet.Web.Optimization" version="1.1.3" targetFramework="net45" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net45" />
+  <package id="MongoDB.Bson" version="2.7.0" targetFramework="net45" />
+  <package id="MongoDB.Driver" version="2.7.0" targetFramework="net45" />
+  <package id="MongoDB.Driver.Core" version="2.7.0" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="5.0.4" targetFramework="net45" />
+  <package id="System.Buffers" version="4.3.0" targetFramework="net45" />
+  <package id="System.Runtime.InteropServices.RuntimeInformation" version="4.0.0" targetFramework="net45" />
   <package id="TinyCsvParser" version="1.6.0" targetFramework="net45" />
   <package id="WebGrease" version="1.5.2" targetFramework="net45" />
 </packages>
